# obsidian-llm-wiki

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  skills-lock.json
.agents/skills/fix-wiki/: SKILL.md
.gemini/policies/: obsidian.toml
.obsidian/: app.json  community-plugins.json
.state/: absorb_state.yaml  ingest_state.yaml
00_Home/: 0_Home.md  Inbox.md
01_Raw/Entities/: 2026-04-08-karpathy-llm-compounding-wiki-pattern.md  2026-04-08-mcphail-v-doulton-trust-law-case.md  2026-04-08-personal-knowledge-wiki-skill-definition.md  2026-04-08-vitalik-local-private-secure-llm-setup.md
01_Raw/Notes/: My view of Karpathy LLM Wiki.md
03_Wiki/: _index.md
03_Wiki/concepts/: Memex.md  Personal-Knowledge-Management.md  RAG.md  Self-Sovereign-AI.md
03_Wiki/patterns/: LLM-Wiki.md  Personal-Knowledge-Wiki.md
03_Wiki/people/: Andrej-Karpathy.md  Farza.md  Vitalik-Buterin.md
03_Wiki/tools/: Claude-Code.md  Gemini.md  MarkItDown.md  NixOS.md  Obsidian.md  OpenClaw.md
Data/Cases/: McPhail v Doulton.md
Data/Clippings/: llm-wiki.md  local  private  secure LLM setup, April 2026.md  personal_wiki_skill.md
Scripts/: absorb.py  gemini_cli.py  ingest.py  ingest_processor.py  state.py  telegram_bot.py  test_state.py
Scripts/prompts/: absorb.md  absorb_planner.md  agent_prompt.md  asr_prompt.md  ingest.md  ingest_recovery.md
Scripts/services/: llama-server-asr.service  note-telegram.service  obsidian.service
