[project]
name = "note"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markitdown-ocr>=0.1.0",
    "markitdown[docx,pdf,pptx,xlsx]>=0.1.5",
    "openai>=2.30.0",
    "pytest>=9.0.3",
    "python-telegram-bot>=22.7",
    "pyyaml>=6.0.3",
]

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py314"

[tool.ruff.lint]
unfixable = []
per-file-ignores = {}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
